--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We are a quality driven artisan & exporters of premium metal/wooden home-decor, garden, kitchen-ware items and other indian handicraft items based from Moradabad City."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta property="og:site_name" content="Primex India Inc.">
+    <meta property="og:title" content="Primex India Inc." />
+    <meta property="og:description" content="We are a quality driven artisan & exporters of premium metal/wooden home-decor, garden, kitchen-ware items and other indian handicraft items based from Moradabad City." />
+    <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/favicon.svg">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
+   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,7 +48,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 
-    <title>React App</title>
+    <title>Primex India Inc.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
